<resources>
    <string name="app_name">EquiFit</string>
    <string name="title_feed">Futter</string>
    <string name="title_calendar">Kalender</string>
    <string name="title_profil">Profil</string>
    <string name="title_password">Passwort</string>
    <string name="title_mail">Email</string>
    <string name="title_login">login</string>
    <string name="title_forgot">vergessen</string>
    <string name="forgot_password">Passwort vergessen</string>
    <string name="register_now">Noch kein Konto? -> Registiere dich hier</string>
    <string name="add_horse">Pferd hinzufügen</string>
    <string name="logout">Ausloggen</string>
    <string name="horseName">PferdeName</string>
    <string name="horseHeight">Stockmaß (in cm)</string>
    <string name="HorseWeight">Gewicht bzw. Soll-Gewicht (in kg)</string>
    <string name="horseCondidion">Trainingszustand</string>
    <string name="HorseDefect">Mangel</string>
    <string name="horseIntolerance">Intoleranz</string>
    <string name="save">speichern</string>
    <string name="back">zurück</string>
    <string name="add_feed">Futter Hinzufügen</string>
    <string name="feedName">Futter Name</string>
    <string name="feedBrand">Marke</string>
    <string name="productDescription">Produktbeschreibung</string>
    <string name="feedComposition">Zusammensetzung</string>
    <string name="feedIngredients">Inhaltsstoffe</string>
    <string name="feedRecommendationDescription">Fütterungsempfehlung</string>
    <string name="feedIngredientsValue">g/kg</string>
    <string name="title_horse">Pferd</string>
    <string name="add_feed_to_feed_plan">Futter zum Futterplan hinzufügen</string>
    <string name="add">+</string>
    <string name="username">Nutzername</string>
    <string name="repeat_password">Passwort wiederholen</string>
    <string name="feed_informations">Futter Informationen:</string>
    <string name="your_horses">Deine Pferde</string>
    <string name="whichFeedInterested">Welches Futter Interessiert dich?</string>
    <string name="feedCosts">Preis</string>
    <string name="feedAmount">Inhalt in kg</string>
    <string name="feed_name">Futtername</string>
    <string name="häufigkeit">Häufigkeit:</string>
    <string name="portion">Portion in Gramm:</string>
    <string name="feed_in_gramm">Gramm</string>
    <string name="add_horse_feed_to_feedplan">Füge das tägliche Futter deines Pferdes dem Futterplan hinzu</string>
    <string name="choose_feed">Wähle ein Futter aus:</string>
    <string name="calculateIngredients">Futterplan Überprüfen</string>
    <string name="your_ingredients">Folgende Inhaltstoffe bekommt sein Pferd pro Tag:</string>
    <string name="add_json">JSON</string>
    <string name="find">suchen</string>
    <string name="filtern">filtern</string>
    <string name="sortieren">sortieren</string>
    <string name="sort_feed">Sortiere Futter nach einem Inhaltsstoff:</string>
    <string name="feedplan">Futterplan:</string>
    <string name="ration">Ration</string>
    <string name="ingredientsName">Inhaltsstoff:</string>
    <string name="value">Menge:</string>
    <string name="unit">Einheit:</string>

    <string-array name="defects_array">
        <item>keine</item>
        <item>Rohprotein </item>
        <item>praec. verd. Rohprotein</item>
        <item>Rohöle und - fette</item>
        <item>Rohfaser</item>
        <item>Rohasche</item>
        <item>Calcium</item>
        <item>Phosphor</item>
        <item>Magnesium</item>
        <item>Chlorid</item>
        <item>Natrium</item>
        <item>Kalium</item>
        <item>Schwefel</item>
        <item>Lysin</item>
        <item>Methionin</item>
        <item>Cystin</item>
        <item>Threonin</item>
        <item>Zink</item>
        <item>Mangan</item>
        <item>Kupfer</item>
        <item>Selen</item>
        <item>Selen organisch</item>
        <item>Eisen</item>
        <item>Jod</item>
        <item>Cobalt</item>
        <item>Vitamin E</item>
        <item>Vitamin A</item>
        <item>Vitamin D3</item>
        <item>Vitamin B1</item>
        <item>Vitamin B2</item>
        <item>Vitamin B6</item>
        <item>Vitamin B12</item>
        <item>ß-Carotin</item>
        <item>Stärke</item>
        <item>Fruktan</item>
        <item>Stärke</item>
        <item>Zucker</item>
        <item>Stärke und Zucker</item>
        <item>Cholinchlorid</item>
        <item>Nicotinsäure</item>
        <item>Folsäure</item>
        <item>Pantothensäure</item>
        <item>Biotin</item>
    </string-array>

    <string-array name="condidion_array">
        <item>gut</item>
        <item>übergewichtig</item>
        <item>untergewichtig</item>
    </string-array>

    <string-array name="search_array">
        <item>aufsteigend</item>
        <item>absteigend</item>
    </string-array>

    <string-array name="ingrements_array">
        <item>Rohprotein </item>
        <item>praec. verd. Rohprotein</item>
        <item>Rohöle und - fette</item>
        <item>Rohfaser</item>
        <item>Rohasche</item>
        <item>Calcium</item>
        <item>Phosphor</item>
        <item>Magnesium</item>
        <item>Chlorid</item>
        <item>Natrium</item>
        <item>Kalium</item>
        <item>Schwefel</item>
        <item>Lysin</item>
        <item>Methionin</item>
        <item>Cystin</item>
        <item>Threonin</item>
        <item>Zink</item>
        <item>Mangan</item>
        <item>Kupfer</item>
        <item>Selen</item>
        <item>Selen organisch</item>
        <item>Eisen</item>
        <item>Jod</item>
        <item>Cobalt</item>
        <item>Vitamin E</item>
        <item>Vitamin A</item>
        <item>Vitamin D3</item>
        <item>Vitamin B1</item>
        <item>Vitamin B2</item>
        <item>Vitamin B6</item>
        <item>Vitamin B12</item>
        <item>ß-Carotin</item>
        <item>Stärke</item>
        <item>Fruktan</item>
        <item>Stärke</item>
        <item>Zucker</item>
        <item>Stärke und Zucker</item>
        <item>Cholinchlorid</item>
        <item>Nicotinsäure</item>
        <item>Folsäure</item>
        <item>Pantothensäure</item>
        <item>Biotin</item>
    </string-array>

    <string-array name="unit_array">
        <item>%</item>
        <item>mg/kg</item>
        <item>MJ/kg</item>
    </string-array>

    <string-array name="number_of_meals_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>