<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/darker_gray"
    android:backgroundTintMode="screen"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:id="@+id/horse_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/horseName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/horse_height"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/horseHeight"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/horse_weight"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/HorseWeight"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_height"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/horse_condidion"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/horseCondidion"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_weight"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/horse_defect"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HorseDefect"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_condidion"
        app:layout_constraintVertical_bias="0.008" />

    <EditText
        android:id="@+id/horse_intolerance"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/horseIntolerance"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_defect"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/save_horse_information_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_intolerance"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/back_to_FeedFragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_horse_information"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horse_intolerance"
        app:layout_constraintVertical_bias="0.197" />


</androidx.constraintlayout.widget.ConstraintLayout>