<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/darker_gray"
    android:backgroundTintMode="screen"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:id="@+id/feed_name"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/feedName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/feed_brand"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/feedBrand"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/feed_product_description"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/productDescription"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_brand"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/feed_composition"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/feedComposition"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_product_description"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/feed_recommendation_description"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/feedRecommendationDescription"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_composition"
        app:layout_constraintVertical_bias="0.018" />


    <EditText
        android:id="@+id/feed_ingredients_value"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:hint="@string/feedIngredientsValue"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/feed_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/feed_recommendation_description"
        app:layout_constraintVertical_bias="0.006" />

    <EditText
        android:id="@+id/feed_ingredients"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/feedIngredients"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_recommendation_description"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/save_feed_information_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/my_button"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_ingredients"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/back_to_CalendarFragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:background="@drawable/my_button"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_feed_information"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_ingredients"
        app:layout_constraintVertical_bias="0.199"
        tools:ignore="UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>