<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.FeedInformationActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/feed_information_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/feed_informations" />

        <TextView
            android:id="@+id/feed_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsName" />
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/value" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

        </LinearLayout>


        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorDarkGreen" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feed_ingredients_name"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/feed_ingredients_value2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/feed_ingredients_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/test"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text=" "/>


    </LinearLayout>



</ScrollView>